# frigbot

./: .gitignore  AnthropicChat.py  CLAUDE.md  README.md  bot.py  build.sh  chat.py  completions.py  frig  frig.py  frig_system_prompt.md  frigbot.py  frigboy.py  frigkill  logger_config.py  lolManager.py  memory_tool.py  puzzles_api.py  pyproject.toml  run.py  state.json  streaks_db.py  summonerPUUIDs.json  utils.py  ytTracker.py
.claude/: settings.json
Zenon/zenon/: zenon.py
Zenon/zenon/actions/: reactions.py
Zenon/zenon/messages/: messages.py
config/: femboyFishing.json  femboyPhysics.json  lastFemboy.json  lastfap.txt  lastfem.json  rpsScores.json  summonerIDs.json  userIDs.json
docs/: claude-code-integration.md
frig_home/: README.md  test_file.txt
frig_mcp/: server.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  DevTools.tsx  discord.ts  index.css  storage.ts  ws.ts
frontend/src/connections/: Board.tsx  ConnectionsGame.tsx  Spectators.tsx  game.ts
frontend/src/wordle/: Board.tsx  SettingsMenu.tsx  Spectators.tsx  WordleGame.tsx  game.ts  words.ts
scripts/: configure_entry_point.py  rename_entry_point.py
